--- a/ex5/index.html
+++ b/ex5/index.html
@@ -7,6 +7,25 @@
     <title>Lista de jogos</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Lista de Jogos</h1>
+    <h2>Paladins</h2>
+    <p>Jogo de tiro com elementos de MOBA.</p>
+    
+    <h3>Mapa: Pedreira Partida</h3>
+    <p>Mapa interessante com vários lugares<br>
+    onde o mapa pode te matar.</p>
+
+    <h2>Valorant</h2>
+    <p>Jogo de tiro tático em primeira pessoa.</p>
+
+    <h3>Meu mapa favorito: Bind</h3>
+    <p>Mapa com diversas rotas e desafios<br>
+    interessantes para defender e atacar.</p>
+
+    <h2>Overwatch</h2>
+    <p>Jogo de tiro em equipe com herois.</p>
+
+    <h3>Mapa: Torre Lijiang</h3>
+    <p></p>
 </body>
 </html>
